Dev/demo-Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
