Dev/demo-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: external-nginx
spec:
  ingressClassName: external-nginx
  rules:
  - host: k8s-ingress-external-a9f41971ce-a114e55267834cef.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
